fix mathitem overflows (#124)
Goal:
  -only overflow when focused (really: focus-within)
  -width of sidebar when not focused

--- a/client/src/features/sceneControls/mathItems/templates/ItemTemplate.module.css
+++ b/client/src/features/sceneControls/mathItems/templates/ItemTemplate.module.css
@@ -1,6 +1,7 @@
 .container {
+  background-color: var(--color-secondary-1);
   display: grid;
-  grid-template-columns: 50px auto min-content;
+  grid-template-columns: 50px minmax(0, 1fr) min-content;
   grid-template-rows: auto auto;
   /*
   avoid border-doubling. See https://stackoverflow.com/q/12692089/2747370
@@ -12,10 +13,15 @@
 
   Note: In some browsers, at some higher zoom levels, double borders show up sometimes.
   */
-  outline: 1px solid gray;
+  outline: 1px solid var(--color-secondary-7);
   margin-top: 1px;
   margin-left: 1px;
   margin-right: 1px;
+}
+.container:focus-within {
+  grid-template-columns: 50px 1fr min-content;
+  width: fit-content;
+  min-width: calc(100% - 2px);
 }
 
 .grid-left-gutter {
